tests/compiletests/ui/dis/ptr_copy.normal.stderr
error: cannot memcpy dynamically sized data
  --> $CORE_SRC/ptr/mod.rs>:642:9
   |
LL |         crate::intrinsics::copy(src, dst, count)
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: used from within `core::ptr::copy::<f32>`
  --> $CORE_SRC/ptr/mod.rs>:627:21
   |
LL | pub const unsafe fn copy<T>(src: *const T, dst: *mut T, count: usize) {
   |                     ^^^^
note: called by `ptr_copy::copy_via_raw_ptr`
  --> <$DIR/ptr_copy.rs>:28:18
   |
LL |         unsafe { core::ptr::copy(src, dst, 1) }
   |                  ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
note: called by `ptr_copy::main`
  --> <$DIR/ptr_copy.rs>:33:5
   |
LL |     copy_via_raw_ptr(&i, o);
   |     ^^^^^^^^^^^^^^^^^^^^^^^
note: called by `main`
  --> <$DIR/ptr_copy.rs>:32:8
   |
LL | pub fn main(i: f32, o: &mut f32) {
   |        ^^^^

error: aborting due to 1 previous error

